--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,6 @@
 
 @layer components {
     .ec-input {
-        @apply py-1 px-3 dark:bg-gray-600 dark:bg-opacity-20 rounded border dark:border-gray-600 text-base outline-none text-gray-100 leading-8 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-900 transition-colors duration-200 ease-in-out
+        @apply py-1 px-3 bg-gray-600 bg-opacity-20 border border-gray-600 text-base outline-none text-gray-100 leading-8 focus:border-indigo-500 focus:bg-transparent focus:ring-2 focus:ring-indigo-900 transition-colors duration-200 ease-in-out
     }
 }
